Fixed more memory stuff

--- a/files/mqtt_sub.config
+++ b/files/mqtt_sub.config
@@ -29,28 +29,28 @@ config topic
 
 config event
     option topic            '/topic1'
-    option parameter_name   'kondicionierius'
+    option parameter_name   'temperature_string'
     option parameter_type   'string'
     option condition        '3'
-    option expectedValue    'salta'
+    option expectedValue    'cold'
 
 config event
     option topic            '/topic1'
-    option parameter_name   'kondicionieriuss'
+    option parameter_name   'temperature_string2'
     option parameter_type   'string'
     option condition        '3'
-    option expectedValue    'salta'
+    option expectedValue    'hot'
 
 config event
     option topic            '/topic2'
-    option parameter_name   'temperatura'
+    option parameter_name   'temperature_int'
     option parameter_type   'int'
     option condition        '1'
-    option expectedValue    '50'
+    option expectedValue    '28'
 
 config event
     option topic            '/topic3'
-    option parameter_name   'ac_status'
+    option parameter_name   'ac_status_string'
     option parameter_type   'int'
     option condition        '3'
     option expectedValue    'on'
